fixed horizontal overflow and added animations.

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,7 @@
   --color-body-darker: #5c5577;
   --color-border: #ccc;
   --border-radius: 30px;
+  overflow-x: hidden;
 }
 
 *,
